--- a/index.html
+++ b/index.html
@@ -43,11 +43,21 @@
                         </li>
 
         </nav>
+       
     </header>
+    <img src="/imagenes/imageO4.png" class="rounded float-end" alt="yo">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+  <!-- Pie de pagina -->
+  <footer class="pie_Pagina">
+    <a target="_blank" href="https://www.instagram.com/olitorres00/"><img width="30px"
+            src="../imagenes/instagram.png" alt="logo_instagram">Seguinos</a>
+    <a target="_blank" href="https://www.facebook.com/oliver.j.tovar/"><img width="30px"
+            src="../imagenes/facebook.png" alt="logo_facebook">Visitenos</a>
+    <a target="_blank" href="https://twitter.com/olitorres00"><img width="30px" src="../imagenes/twitter.png"
+            alt="logo_twitter">Contactenos</a>
+</footer>
 </body>
-
-</html>
+        </html>
