--- a/vistas/promos.html
+++ b/vistas/promos.html
@@ -11,7 +11,7 @@
     <title>Promos</title>
 </head>
 
-<body class="imgFondo">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -43,11 +43,58 @@
                         </li>
 
         </nav>
+          <!-- tabla -->
+    </header>
+    <main>
+        <section>
+            <main>
+                <h1 class="tituloPromo">Promos</h1>
+                <section class="bloquePromo">
+                    <div class="bloqueTabla">
+
+                        <table class="table" border=”1”>
+                            <tr>
+                                <td>Promo</td>
+                                <td>Básica</td>
+                                <td>Full</td>
+                            </tr>
+                            <tr>
+                                <td>Redes</td>
+                                <td>USM 150 por mes</td>
+                                <td>USM 500 por mes</td>
+                            </tr>
+                            <tr>
+                                <td>Identidad Gráfica</td>
+                                <td>USM 300</td>
+                                <td>USM 1000</td>
+                            </tr>
+                        </table>
+                    </div>
+                </section>
+                <section>
+                    <div class="parrafoPromo">
+                        <p>Promo redes básica: 20 imagenes, 10 en el fead, 10 en historias.Promo redes full, 30
+                            imagenes, 15
+                            en el fead, 15 en historas.Identetidad Gráfica Básica incluye logotipo, aplicaciones y
+                            mebrete,
+                            Identidad gráfica Full incluye logotivo, aplicaciones, mebretes, manuela coorporativo y 4
+                            flyer.
+                        </p>
+                    </div>
+                </section>
+
+            </main>
     </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+ <!-- Pie de pagina -->
+ <footer class="pie_Pagina">
+    <a target="_blank" href="https://www.instagram.com/olitorres00/"><img width="30px"
+            src="../imagenes/instagram.png" alt="logo_instagram">Seguinos</a>
+    <a target="_blank" href="https://www.facebook.com/oliver.j.tovar/"><img width="30px"
+            src="../imagenes/facebook.png" alt="logo_facebook">Visitenos</a>
+    <a target="_blank" href="https://twitter.com/olitorres00"><img width="30px" src="../imagenes/twitter.png"
+            alt="logo_twitter">Contactenos</a>
+</footer>
 </body>
 
 </html>
