--- a/vistas/quiensoy.html
+++ b/vistas/quiensoy.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>¿Quien Soy?</title>
+    <title>Oliver Torres Diseñador Gráfico</title>
 </head>
 
-<body class="imgFondo">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -44,10 +44,35 @@
 
         </nav>
     </header>
+    <main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        <!-- texto quien soy -->
+        <section class="textBox">
+            <h3>¿Quien Soy?</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus minus odio id possimus nam magni! Sint
+                culpa, assumenda velit molestias aperiam architecto suscipit excepturi nam illo, consectetur perferendis
+                repellendus quidem! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus minus odio id
+                possimus nam magni! Sint culpa, assumenda velit molestias aperiam architecto suscipit excepturi nam
+                illo, consectetur perferendis repellendus quidem! Lorem ipsum dolor sit, amet consectetur adipisicing
+                elit. Delectus minus odio id possimus nam magni! Sint culpa, assumenda velit molestias aperiam
+                architecto suscipit excepturi nam illo, consectetur perferendis repellendus quidem!</p>
+        </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    </main>
+    <!-- Pie de pagina -->
+    <footer class="pie_Pagina">
+        <a target="_blank" href="https://www.instagram.com/olitorres00/"><img width="30px"
+                src="../imagenes/instagram.png" alt="logo_instagram">Seguinos</a>
+        <a target="_blank" href="https://www.facebook.com/oliver.j.tovar/"><img width="30px"
+                src="../imagenes/facebook.png" alt="logo_facebook">Visitenos</a>
+        <a target="_blank" href="https://twitter.com/olitorres00"><img width="30px" src="../imagenes/twitter.png"
+                alt="logo_twitter">Contactenos</a>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
